g3 header, hero and  banner completed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
     <link rel="stylesheet" href="style/daisyui@5.css">
 </head>
 <body>
-    
+    <header class="flex items-center bg-[#fff4e7]  justify-around py-8">
+        <section>
+            <div>
+                <h1 class="font-bold text-5xl">G3 Architects</h1>
+            </div>
+        </section>
+        <section>
+            <ul class="flex gap-10 justify-center">
+                <li>Home</li>
+                <li>About </li>
+                <li>Contact </li>
+                <li>Login</li>
+            </ul>
+        </section>
+    </header>
+
+    <section class="bg-[#fff4e7] py-5 ">
+        <section class="text-center">
+            <h1 class="text-center pt-5 font-bold text-6xl/18 capitalize">Brand new <br> groups of Architects</h1>
+            <p class="text-center text-[16px]/5 w-[868px] my-3 m-auto font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="bg-orange-400 text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore More</button>
+            <div class="w-6xl mt-4 m-auto">
+                <img src="images/banner.png" alt="">
+            </div>
+        </section>
+    </section>
+
+
+
     <script src="style/browser@4.js"></script>
     <script src="main.js"></script>
 </body>
