--- a/index.html
+++ b/index.html
@@ -28,13 +28,26 @@
         <section class="text-center">
             <h1 class="text-center pt-5 font-bold text-6xl/18 capitalize">Brand new <br> groups of Architects</h1>
             <p class="text-center text-[16px]/5 w-[868px] my-3 m-auto font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="bg-orange-400 text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore More</button>
+            <button class="bg-orange-400 cursor-pointer text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore More</button>
             <div class="w-6xl mt-4 m-auto">
                 <img src="images/banner.png" alt="">
             </div>
         </section>
     </section>
 
+    <section class="flex justify-center">
+        <section>
+            <div class="grid-cols-2 m-auto grid w-2xl gap-5">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+        </section>
+        <section>
+            <h1>Quick List of our features</h1>
+        </section>
+    </section>
 
 
     <script src="style/browser@4.js"></script>
