features section completed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style/daisyui@5.css">
 </head>
+
 <body>
     <header class="flex items-center bg-[#fff4e7]  justify-around py-8">
         <section>
@@ -27,30 +29,84 @@
     <section class="bg-[#fff4e7] py-5 ">
         <section class="text-center">
             <h1 class="text-center pt-5 font-bold text-6xl/18 capitalize">Brand new <br> groups of Architects</h1>
-            <p class="text-center text-[16px]/5 w-[868px] my-3 m-auto font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="bg-orange-400 cursor-pointer text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore More</button>
+            <p class="text-center text-[16px]/5 w-[868px] my-3 m-auto font-normal">There are many variations of passages
+                of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+                randomised words which don't look even</p>
+            <button
+                class="bg-[#FF900E] cursor-pointer text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore
+                More</button>
             <div class="w-6xl mt-4 m-auto">
                 <img src="images/banner.png" alt="">
             </div>
         </section>
     </section>
 
-    <section class="flex justify-center">
-        <section>
-            <div class="grid-cols-2 m-auto grid w-2xl gap-5">
+    <section class="py-20 grid-cols-2 items-center m-auto grid gap-10 container ">
+        <section class="p-3">
+            <div class="grid-cols-2 m-auto grid w-full gap-5">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
         </section>
-        <section>
-            <h1>Quick List of our features</h1>
+        <section class="ps-10">
+            <h1 class="text-5xl/14 capitalize text-[#727272] font-medium">Quick List <span class="font-bold text-black">
+                    of our</span><br> <span class="text-[#FF900E]">features</span></h1>
+            <p class="font-normal text-[16px] text-[#737373]">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even</p>
+            <button
+                class="bg-[#FF900E] cursor-pointer text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore
+                More</button>
+
         </section>
+    </section>
+    <section class="grid grid-cols-2 py-20 m-auto gap-20 items-center container justify-center">
+        <section class=" ">
+            <section>
+                <h1 class="border-s-5 border-[#FF900E] ps-2 text-[45px] font-bold">Features you will <br> love & enjoy
+                </h1>
+                <p class="my-5 text-[16px] font-normal block">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
+            </section>
+            <section>
+                <div class="shadow my-5 p-5 rounded">
+                    <h4 class="font-bold text-lg">Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow my-5 p-5 rounded">
+                    <h4 class="font-bold text-lg">Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow my-5 p-5 rounded">
+                    <h4 class="font-bold text-lg">Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="shadow my-5 p-5 rounded">
+                    <h4 class="font-bold text-lg">Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </section>
+        </section>
+
+        <section class="relative m-auto">
+            <div class="grid-cols-2 m-auto  w-[90%] gap-5">
+                <img src="images/architect.png" alt="">
+                <div
+                    class="h-35 w-65 absolute -left-10 -bottom-20 rounded-2xl p-5 flex flex-col justify-center bg-[#FF900E]">
+                    <h1 class="text-[40px] font-bold text-center text-white">10+ Year</h1>
+                    <h3 class="text-[25px] font-medium text-center text-white">Experience</h3>
+                </div>
+            </div>
+        </section>
+
     </section>
 
 
     <script src="style/browser@4.js"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
