figma and pdf file removed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button
                 class="bg-[#FF900E] cursor-pointer text-white px-4 my-4 py-3 rounded font-semibold hover:scale-[.9]">Explore
                 More</button>
-            <div class="w-6xl mt-4 m-auto">
+            <div class="w-6xl mt-4 mb-8 m-auto">
                 <img src="images/banner.png" alt="">
             </div>
         </section>
