--- a/index.html
+++ b/index.html
@@ -200,6 +200,29 @@
         </section>
     </section>
 
+<section class="container m-auto">
+
+    <section class="flex justify-around w-full m-auto">
+        <div class="w-[50%] ">
+            <img class="w-[80%] rounded-2xl" src="images/premium_photo-1681487870238-4a2dfddc6bcb.jpg" alt="">
+        </div>
+        <div class="w-[40%] ">
+            <input type="text" name="" id="">
+            
+        </div>
+    </section>
+</section>
+
+
+
+
+
+
+
+
+
+
+
     <footer class="">
         <section class="text-center w-[90%] mb-20  rounded-3xl m-auto bg-[#FFF4E7] p-6">
             <p>All rights reserved copyright@2023 startup landing page design</p>
