--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
             
             <textarea class="px-4 py-2.5 my-3 w-full rounded-2xl border-[#FF900E] border-2" name="" id="message" placeholder="Enter your message" cols="30" rows="6"></textarea>
 
-            <button id="btn"  class="bg-[#FF900E] overflow-hidden active:outline-0  cursor-pointer text-white px-6 my-2 py-3 rounded font-semibold hover:scale-[.9] active:translate-y-1 text-center block mx-auto">Submit <i class="fa-sharp-duotone fa-solid transition-all delay-200 fa-paper-plane-top"></i> </button>
+            <!-- <button id="btn"  class="bg-[#FF900E]  overflow-hidden active:outline-0  cursor-pointer text-white px-6 my-2 py-3 rounded font-semibold hover:scale-[.9] active:translate-y-1 text-center block mx-auto">Submit <i class="fa-sharp-duotone fa-solid transition-all delay-200 fa-paper-plane-top"></i> </button> -->
+            <button id="btn"  class="btn bg-[#FF900E] btn-warning px-6 py-3 h-auto overflow-hidden rounded-2xl  hover:scale-[.9] text-white block mx-auto">Submit <i class="fa-sharp-duotone fa-solid transition-all delay-200 fa-paper-plane-top"></i> </button>
         </div>
     </section>
 </section>
@@ -250,7 +251,7 @@
     <!-- You can open the modal using ID.showModal() method -->
 <!-- <button class="btn" onclick="my_modal_3.showModal()">open modal</button> -->
 <dialog id="my_modal_3" class="modal">
-  <div class="modal-box">
+  <div class="modal-box transition-all">
     <form method="dialog">
       <button class="btn btn-sm btn-circle btn-soft hover:text-white btn-error absolute right-2 top-2">✕</button>
     </form>
